change id to uuid in user
